# MiniSQL

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  minisql.tex
Data/baislsl/: _sys_primary_test_wonder.ind  _sys_student_sage.ind  _sys_student_sno.ind  gg.ind  student.db  student_index.ind
MiniSQL/API/: API.cpp  API.h
MiniSQL/Interpreter/: Error.h  Interpreter.cpp  Interpreter.h  Interpreter_exception.h
MiniSQL/buffer/: Block.cpp  Block.h  Buffer_exception.h  Buffer_manager.cpp  Buffer_manager.h
MiniSQL/catalog/: Catalog_exception.h  Catalog_manager.cpp  Catalog_manager.h
MiniSQL/index/: BNode.cpp  BNode.h  BP_node.cpp  BP_node.h  BP_tree.cpp  BP_tree.h  Index.h  Index_exception.h  Index_manager.cpp  Index_manager.h
MiniSQL/record/: Record_exception.h  Record_manager.cpp  Record_manager.h
MiniSQL/util/: Column.cpp  Column.h  Condition.cpp  Condition.h  Index.h  Result_set.cpp  Result_set.h  String_handler.cpp  String_handler.h  Table.cpp  Table.h  Type_info.cpp  Type_info.h  Type_name.h  Type_value.cpp  Type_value.h  Util_exception.h
Test/: cata.xml  display.sql  run.sql  sql  test.cpp  test.h  test.sql  try.sql
